# homo-lumen-compendiums

./: .env.example  .gitignore  ABSOLUTE_FINAL_SESSION_SUMMARY_OCT_26.md  AGENT_UPDATE_HYBRID_ARCHITECTURE_V21.md  AGENT_UPDATE_QDA_V2_PRODUCTION_READY.md  ALL_DATABASE_PROPERTIES_COMPLETE.md  AMQ_001_AUTOMATION_ROADMAP_IMPLEMENTATION.md  AMQ_CODE_SPORSMAL_DIAGRAM_ANALYSE.md  AMQ_CODE_SPORSMAL_FALCON_COMPETITIVE_ANALYSIS.md  AMQ_MANUS_SVAR_DIAGRAM_ANALYSE.md  AMQ_MANUS_SVAR_OS_DESIGN_STRATEGY.md  AMQ_MANUS_TO_ORION_REINTEGRATION.md  AMQ_TIL_CODE_MOBILE_SIMULATOR_EXTENDED.md  API_KEYS_GUIDE.md  ARCHITECTURE_COMPARISON_AND_INTEGRATION_PLAN.md  ARCHITECTURE_RELATIONSHIP.md  ARF_REFLECTION_TEMPLATE.md  ASANA_IMPORT_HOMO_LUMEN_RESONANS.csv  ASANA_TASK_STRUCTURE_HOMO_LUMEN_RESONANS.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.0.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.1.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.10.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.2.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.3.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.4.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.5.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.6.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.7.10.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.7.11.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.7.12.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.7.13.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.7.14.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.7.15.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.7.9.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.7.md  CLAUDE_CODE_LEVENDE_KOMPENDIUM_V1.9.md  COALITION_DATABASE_INTEGRATION_REQUEST.md  CODE_ARCHITECTURE_SYNTHESIS_MOBILE_SIMULATOR.md  CODE_LK_V1716_UPDATE.md  CODE_LK_V1717_UPDATE.md  (+155 more)
ama-backend/: .gitignore  Makefile  README.md  README_NYRA_REAL_INTEGRATION.md  README_ORION_CLAUDE.md  README_ORION_CLAUDE_INTEGRATION.md  README_THALUS_GROK.md  README_ZARA_DEEPSEEK.md  consultation_response.json  curl_demo_for_orjan.sh  docker-compose.yml  env.example  example_orion_usage.py  example_zara_usage.py  minimal_server.py  pyproject.toml  redis_publisher.py  requirements.txt  requirements_minimal.txt  security_audit.py  security_audit_20250625_104313.json  test_collective_intelligence_demo.py  test_collective_intelligence_simple.py  test_csn_consultation.json  test_lira_nav_losen_integration.py  test_orion_real_integration.py  test_thalus_grok_integration.py  test_zara_deepseek_integration.py
ama-backend/.cursor/rules/: ama.mdc
ama-backend/ama_project/: .gitignore  AMA_IMPLEMENTATION_STATUS.md  CLAUDE_CODE_COMMAND.md  README.md  check_ama_status.py  env.example  requirements.txt  test_ama_api.py  test_integrated_ama_a2a.py  test_polycomputational_engine.py  test_symbiotic_architecture.py
ama-backend/ama_project/portugal_node/: README.md  cultural_consciousness_framework.md  mobile_consciousness_interface.md  portugal_philosophical_manifest.md
ama-backend/ama_project/src/core/: a2a_transport_layer.py  (+15 more)
ama-backend/csn_server/: config.py  main.py  main_fastapi.py  requirements.txt
ama-backend/csn_server/agents/: abacus_tools.py  base_agent.py  nyra_tools.py  polycomputational.py  thalus_tools.py
ama-backend/csn_server/examples/: agent_tools_example.py  ama_memory_example.py  lira_real_biofield_analysis_example.py  multi_platform_coordination_example.py
ama-backend/csn_server/mcp_endpoints/: notion_mcp.py
ama-backend/csn_server/routers/: __init__.py  agent_coordination.py  agent_endpoints.py  ama_integration.py  ama_memory_endpoints.py  ama_memory_layers.py  biofelt_validation.py  coordination_endpoints.py  health.py  lira_agent_endpoints.py  mcp_endpoints.py
ama-backend/homo_lumen_env/: pyvenv.cfg
ama-backend/tests/: __init__.py  conftest.py  test_aurora.py  test_collective_intelligence.py
(+1129 files in other folders)
